--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-architect
 title: Welcome to Sals Github Page
 description: Computer Engineer, Entrepreneur, Dreamer, SHPE & IEEE Member
