--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Welcome to Sals Github Page
-#logo: /assets/img/2023Headshot.jpg
+logo: /assets/img/2023Headshot.jpg
 description: Computer Engineer, Entrepreneur, Dreamer, SHPE & IEEE Member
